
- mysqlnd:
  . Fixed bug #73800 (sporadic segfault with MYSQLI_OPT_INT_AND_FLOAT_NATIVE). 
	(vanviegen)

- OpenSSL:
  . Fixed bug #71519 (add serial hex to return value array). (xrobau)

- PCRE:
  . Fixed bug #61780 (Inconsistent PCRE captures in match results). (cmb)

- PDO:
  . Add "Sent SQL" to debug dump for emulated prepares. (Adam Baratz)

- PDO_DBlib:
  . Fixed bug #73234 (Emulated statements let value dictate parameter type).
    (Adam Baratz)
  . Fixed bug #73396 (bigint columns are returned as strings). (Adam Baratz)
  . Expose DB-Library version as \PDO::DBLIB_ATTR_VERSION attribute on \PDO
    instance. (Adam Baratz)
  . Add test coverage for bug #72969. (Jeff Farr)

- PDO_OCI:
  . Fixed bug #54379 (PDO_OCI: UTF-8 output gets truncated). (gureedo / Oracle)

- PDO_PgSQL:
  . Fixed bug #73959 (lastInsertId fails to throw an exception for wrong 
    sequence name). (andrewnester)

- PDO_Sqlite
  . Switch to sqlite3_prepare_v2() and sqlite3_close_v2() functions (rasmus)

- posix:
  . Fixed bug #71219 (configure script incorrectly checks for ttyname_r). (atoh)

- Session:
  . Fixed bug #73461 (Prohibit session save handler recursion). (Yasuo)
  . PR #2233 Removed register_globals related code and "!" can be used as $_SESSION key name. (Yasuo)
  . Improved bug #73100 fix. 'user' save handler can only be set by session_set_save_handler()
  . Fixed bug #69582 (session not readable by root in CLI). (EvgeniySpinov)

- SOAP:
  . Fixed bug #69137 (Peer verification fails when using a proxy with SoapClient)
    (Keith Smiley)

- SQLite3:
  . Update to Sqlite 3.16.2. (cmb)

- Standard:
  . Add subject to mail log. (tomsommer)
  . Fixed bug #31875 (get_defined_functions additional param to exclude
	disabled functions). (willianveiga)
  . Fixed bug #69442 (closing of fd incorrect when PTS enabled). (jaytaph)
  . Fixed bug #72974 (imap is undefined service on AIX). (matthieu.sarter)
  . Fixed bug #72979 (money_format stores wrong length AIX). (matthieu.sarter)

- XML: